--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Bruteforce Heat Map</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
         <link rel="stylesheet" href="style.css" />
-        <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.min.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
         <script src="heatmap.js"></script>
         <script src="leaflet-heatmap.js"></script>
     </head>
