--- a/public/index.html
+++ b/public/index.html
@@ -38,25 +38,29 @@
                 fullscreenControl: true,
             });
 
-            var logs = []
-
             var icon = L.icon({
                 iconUrl: 'https://img.icons8.com/color/48/000000/marker--v1.png',
                 iconSize: [17.5, 20],
                 iconAnchor: [8.75, 0]
             });
 
-            function setMarkers() {
-                for (key of Object.keys(logs)) {
-                    var popup = `IP: ${key}\nAttempts: ${logs[key]['attempts']}`;
-                                L.marker([logs[key]['lat'], logs[key]['lng']], {icon: icon}).addTo(map).bindPopup(popup);
+            function setMarker(data) {
+                var popup = `IP: ${data.ip}\nAttempts: ${data.attempts}`;
+                L.marker([data.lat, data.lng], {icon: icon}).addTo(map).bindPopup(popup);
+            }
+
+            function setMarkers(data) {
+                let n = data.n;
+                for (let i = 0; i < n; i++) {
+                    fetch('/geoip/' + i)
+                        .then(res => res.json())
+                        .then(data => setMarker(data))
                 }
             }
 
-            fetch("/geoip")
+            fetch("/geoip/length")
                 .then(res => res.json())
-                .then(data => logs = data)
-                .then(() => setMarkers())
+                .then(data => setMarkers(data))
         </script>
     </body>
 </html>
