fullscreen button removed but default fullscreen with heading over map
Signed-off-by: Pierre-Louis Delcroix <pierrelouisdelcroix2001@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
         <script src="heatmap.js"></script>
         <script src="leaflet-heatmap.js"></script>
-        <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
     </head>
     <body>
         <h1>SSH Bruteforce Map</h1>
@@ -16,7 +15,7 @@
         <script>
             var Jawg_Matrix = L.tileLayer('https://{s}.tile.jawg.io/jawg-matrix/{z}/{x}/{y}.png?access-token={accessToken}', {
                 attribution: '<a href="http://jawg.io" title="Tiles Courtesy of Jawg Maps" target="_blank">&copy; <b>Jawg</b>Maps</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-                minZoom: 2,
+                minZoom: 3,
                 maxZoom: 22,
                 accessToken: 'robwSG8HiMYNPewxsT3oytycdnlivt23wW3EZvNk9a9V3yU6pj9QhnTtNVIovcVw'
             });
@@ -35,7 +34,6 @@
                 center: new L.LatLng(25, 0),
                 zoom: 2,
                 layers: [Jawg_Matrix],
-                fullscreenControl: true,
             });
 
             var icon = L.icon({
@@ -49,10 +47,10 @@
                 L.marker([data.lat, data.lng], {icon: icon}).addTo(map).bindPopup(popup);
             }
 
-            function setMarkers(data) {
+            async function setMarkers(data) {
                 let n = data.n;
                 for (let i = 0; i < n; i++) {
-                    fetch('/geoip/' + i)
+                    await fetch('/geoip/' + i)
                         .then(res => res.json())
                         .then(data => setMarker(data))
                 }
