--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,11 @@
 
             function setMarkers(data) {
                 let n = data.n;
-                for (let i = 0; i < n; i++) {
+                let start = 0;
+                if (n >= 100)
+                    start = n - 100;
+
+                for (let i = start; i < n; i++) {
                     fetch('/geoip/' + i)
                         .then(res => res.json())
                         .then(data => setMarker(data))
